# FileToHeader

./: CMakeLists.txt  README.md
FileToHeader/: FileToHeader.sln  FileToHeader.vcxproj  FileToHeader.vcxproj.filters  main.cpp
source/file_to_header/: main.cpp
